target/debug/build/facet-core-b5598703ea654a49/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:2:13
  |
2 |             #![feature(portable_simd)]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
